--- a/web-admin/pom.xml
+++ b/web-admin/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
-	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>com.isystk.sample</groupId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
+
+	<modelVersion>4.0.0</modelVersion>
 	<artifactId>web-admin</artifactId>
-	<name>web-admin</name>
 	<packaging>war</packaging>
-	<url>http://maven.apache.org</url>
-	<properties>
-		<m2eclipse.wtp.contextRoot>/admin/</m2eclipse.wtp.contextRoot>
-	</properties>
+	<name>web-admin</name>
+	<description />
 	<build>
 		<finalName>admin</finalName>
 		<plugins>
@@ -22,7 +21,7 @@
 				<configuration>
 					<addGroupIdToProjectName>true</addGroupIdToProjectName>
 					<addVersionToProjectName>true</addVersionToProjectName>
-					<wtpContextName>/</wtpContextName>
+					<wtpContextName>/admin</wtpContextName>
 					<wtpapplicationxml>true</wtpapplicationxml>
 					<wtpmanifest>false</wtpmanifest>
 					<wtpversion>1.5</wtpversion>
@@ -54,3 +53,4 @@
 		</dependency>
 	</dependencies>
 </project>
+
